--- a/how_to_play.html
+++ b/how_to_play.html
@@ -11,8 +11,21 @@
         <div class="content">
             <button class="close-btn" onclick="window.location.href='index.html'">X</button>
             <h1>How to Play?</h1>
-            <p> The <strong>INTERCOUNTRY</strong> game is a fun and educational map-based game. The game starts with a large display of the <strong>INTERCOUNTRY</strong> title flashing on the screen. Below this screen, there are two buttons: You can click the <strong>How to Play</strong> button to learn the game rules, or click the <strong>Start Game</strong> button to begin playing. Once the game starts, a 120-second countdown begins, and three countries will be displayed on the screen. These three countries will be the neighbors of the country you need to guess. The objective is to identify the correct country that shares borders with all three of these countries. You should write your answer in the answer box on the screen in <strong>uppercase letters</strong>. If your answer is correct, you earn 1 point, and a new set of three countries will be presented. In the game, you earn 1 point for every correct answer. However, if you give a wrong answer, you lose the game, and your score will be displayed on the screen. The game duration is 120 seconds, and if time runs out, a "Time's Up" message will be displayed. During this time, you will earn 1 point for each correct guess of a country combination. It is possible to score up to 40 points by correctly guessing all the country combinations within the 120 seconds. The game is still in development, and more features will be added over time to make it more enjoyable. <strong>We wish you all a great game!</strong> </p>
+            <p>Welcome to <strong>INTERCOUNTRY</strong>! This is an exciting map-based game where your knowledge of countries and borders will be put to the test. Here’s how to play:</p>
+            <ul>
+                <li>Start the game by clicking the <strong>"Start Game"</strong> button on the main screen.</li>
+                <li>You’ll be given a map showing the globe, with a timer counting down from 120 seconds.</li>
+                <li>On the right, you will see a list of three countries. Your task is to guess which country is located at the intersection of all three countries’ borders.</li>
+                <li>Click on one of the three options that appear below the map to make your guess.</li>
+                <li>If your guess is correct, you’ll earn 1 point, and the game will move on to the next round.</li>
+                <li>If you guess incorrectly, you will lose the game, and your score will be displayed.</li>
+                <li>The game lasts for 120 seconds. If you don’t answer all questions before time runs out, the game will end, and your score will be shown.</li>
+            </ul>
+            <p>Your objective is to score as many points as possible within the 120 seconds. Good luck!</p>
+            <p>Remember: You must choose the country that shares borders with all three countries shown. If you need help, refer to the map!</p>
+            <p><strong>We wish you all a great game!</strong></p>
         </div>
     </div>
 </body>
 </html>
+
